--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <div class="logo">
+            <a href="https://wa.me/5493416676344/?" target="_blank"><img src="./Images/Logo-ws.png" alt="" class="ws"></a>
             <a href="https://www.instagram.com/santiago_marsili_platero/" target="_blank"><img src="./Images/Logo-ig.png" alt="" class="Ig"></a>
             <a href="https://www.facebook.com/santiago.marsili.7" target="_blank"><img src="./Images/Logo-fb.png" alt="" class="Fb"></a>
         </div>
@@ -22,6 +23,7 @@
     </header>
 
     <main>
+        <h1>Cabos y Vainas</h1>
         <div class="container">
             <div class="card">
                 <img src="./Images/Cuchillos-1.webp" alt="" class="pic">
