--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <h1>Cabos y Vainas</h1>
+        <a href="" class="subTitles">Cabos y Vainas</a>
         <div class="container">
             <div class="card">
                 <img src="./Images/Cuchillos-1.webp" alt="" class="pic">
@@ -36,6 +36,21 @@
             </div>
             <div class="card">
                 <img src="./Images/Cuchillos-4.webp" alt="" class="pic">
+            </div>
+        </div>
+        <a href="" class="subTitles">Hebillas</a>
+        <div class="container">
+            <div class="card">
+                <img src="./Images/Hebillas-1.webp" alt="" class="pic">
+            </div>
+        </div>
+        <a href="" class="subTitles">Rastras</a>
+        <div class="container">
+            <div class="card">
+                <img src="./Images/Rastra-1.webp" alt="pic">
+            </div>
+            <div class="card">
+                <img src="./Images/Rastra-1.webp" alt="pic">
             </div>
         </div>
     </main>
