espacio entre subtitulos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </header>
 
     <main>
-        <a href="" class="subTitles">Cabos y Vainas</a>
+        <div class="sub">
+            <a href="" class="subTitles">Cabos y Vainas</a>
+        </div>
         <div class="container">
             <div class="card">
                 <img src="./Images/Cuchillos-1.webp" alt="" class="pic">
@@ -38,13 +40,17 @@
                 <img src="./Images/Cuchillos-4.webp" alt="" class="pic">
             </div>
         </div>
-        <a href="" class="subTitles">Hebillas</a>
+        <div class="sub">
+            <a href="" class="subTitles">Hebillas</a>
+        </div>
         <div class="container">
             <div class="card">
                 <img src="./Images/Hebillas-1.webp" alt="" class="pic">
             </div>
         </div>
-        <a href="" class="subTitles">Rastras</a>
+        <div class="sub">
+            <a href="" class="subTitles">Rastras</a>
+        </div>
         <div class="container">
             <div class="card">
                 <img src="./Images/Rastra-1.webp" alt="pic">
