Hago apartados hebillas, cabos y rastras

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main>
         <div class="sub">
-            <a href="" class="subTitles">Cabos y Vainas</a>
+            <a href="./html/CabosYVainas.html" class="subTitles">Cabos y Vainas</a>
         </div>
         <div class="container">
             <div class="card">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="sub">
-            <a href="" class="subTitles">Hebillas</a>
+            <a href="./html/Hebillas.html" class="subTitles">Hebillas</a>
         </div>
         <div class="container">
             <div class="card">
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="sub">
-            <a href="" class="subTitles">Rastras</a>
+            <a href="./html/Rastras.html" class="subTitles">Rastras</a>
         </div>
         <div class="container">
         
