Agrego apartados con link

--- a/html/Rastras.html
+++ b/html/Rastras.html
@@ -3,18 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rastras</title>
+    <title>Cabos y Vainas</title>
+    <link rel="stylesheet" href="../css/CabosYVainas.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="https://wa.me/5493416676344/?" target="_blank"><img src="./Images/Logo-ws.png" alt="" class="ws"></a>
-            <a href="https://www.instagram.com/santiago_marsili_platero/" target="_blank"><img src="./Images/Logo-ig.png" alt="" class="Ig"></a>
-            <a href="https://www.facebook.com/santiago.marsili.7" target="_blank"><img src="./Images/Logo-fb.png" alt="" class="Fb"></a>
+            <a href="https://wa.me/5493416676344/?" target="_blank"><img src="../Images/Logo-ws.png" alt="" class="ws"></a>
+            <a href="https://www.instagram.com/santiago_marsili_platero/" target="_blank"><img src="../Images/Logo-ig.png" alt="" class="Ig"></a>
+            <a href="https://www.facebook.com/santiago.marsili.7" target="_blank"><img src="../Images/Logo-fb.png" alt="" class="Fb"></a>
         </div>
         <div class="pc">
-            <a href="index.html" class="pc1">Platería Criolla</a>
+            <a href="../index.html" class="pc1">Platería Criolla</a>
         </div>
     </header>
+    <main>
+        <div class="sub">
+            <a href="../html/Rastras.html" class="subTitles">Rastras</a>
+        </div>
+    </main>
 </body>
 </html>
